--- a/sobre.html
+++ b/sobre.html
@@ -181,7 +181,7 @@
 
     <footer class="footer mt-5">
         <div class="container">
-           <p>&copy; 2025 Gustavo de Assis Coutinho. Todos os direitos reservados.</p>
+           <p>&copy; 2025 Gustavo de Assis Coutinho</p>
         </div>
     </footer>
 
