--- a/funcionalidades.html
+++ b/funcionalidades.html
@@ -276,6 +276,17 @@
             <a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/" target="_blank" class="btn btn-info btn-lg">Acessar Documentação Oficial</a>
         </div>
     </div>
+    <div class="row mb-4">
+    <p class="text-center">
+        Quer ver um exemplo na prática? Clique no botão abaixo para acessar um exemplo funcional.
+    </p>
+    <div class="text-center">
+        <a href="https://getbootstrap.com/docs/5.3/examples/" class="btn btn-info btn-lg" target="_blank">
+            Ver Exemplo em Bootstrap
+        </a>
+    </div>
+</div>
+
 
     <footer class="footer mt-5">
         <div class="container">
