--- a/funcionalidades.html
+++ b/funcionalidades.html
@@ -281,7 +281,7 @@
         Quer ver um exemplo na prática? Clique no botão abaixo para acessar um exemplo funcional.
     </p>
     <div class="text-center">
-        <a href="https://getbootstrap.com/docs/5.3/examples/" class="btn btn-info btn-lg" target="_blank">
+        <a href="./Exemplo/formulario.html" class="btn btn-info btn-lg" target="_blank">
             Ver Exemplo em Bootstrap
         </a>
     </div>
