--- a/funcionalidades.html
+++ b/funcionalidades.html
@@ -282,7 +282,7 @@
     </p>
     <div class="text-center">
         <a href="./Exemplo/formulario.html" class="btn btn-info btn-lg" target="_blank">
-            Ver Exemplo em Bootstrap
+            Exemplo
         </a>
     </div>
 </div>
