--- a/funcionalidades.html
+++ b/funcionalidades.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
-        /* Variáveis CSS para o Tema Claro (padrão) */
+        /* Variáveis CSS para o Tema Claro  */
         :root {
             --bs-body-bg: #ffffff; /* Fundo principal */
             --bs-body-color: #212529; /* Cor do texto principal */
