--- a/Exemplo/formulario.html
+++ b/Exemplo/formulario.html
@@ -76,7 +76,7 @@
                         <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active"  href="./funcionalidades.html">Funcionalidades</a>
+                        <a class="nav-link"  href="./funcionalidades.html">Funcionalidades</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./sobre.html">Sobre</a>
