--- a/Exemplo/formulario.html
+++ b/Exemplo/formulario.html
@@ -73,13 +73,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="funcionalidades.html">Funcionalidades</a>
+                        <a class="nav-link"  href="./funcionalidades.html">Funcionalidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sobre.html">Sobre</a>
+                        <a class="nav-link" href="./sobre.html">Sobre</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-outline-info ms-lg-3" id="downloadButton" href="./">
